--- a/docs-book/output/master_middleman/bookbinder_config.yml
+++ b/docs-book/output/master_middleman/bookbinder_config.yml
@@ -1,13 +1,13 @@
 ---
 :archive_menu:
-  .: 
+  ".": 
 :production_host: hello
 :subnav_templates:
   altoros-heartbeat: altoros-heartbeat_subnav
 :template_variables: 
-:local_repo_dir: /Users/jacobknostman/workspace/docs-altoros-heartbeat
+:local_repo_dir: "/docs"
 :workspace: !ruby/object:Pathname
-  path: /Users/jacobknostman/workspace/docs-altoros-heartbeat/docs-book/output/master_middleman/source
+  path: "/docs/docs-book/output/master_middleman/source"
 :feedback_enabled: 
 :repo_link_enabled: true
 :repo_links:
