--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
-docs-book/final_app/*
-docs-book/output/*
-*.log
+output
+final_app
+.bundle
+Gemfile.lock
+final_app/*
+cached_shas.yml
+**/.sass-cache/*
+bin
+[#]*[#]
