Revert "adds a better gitnore"
This reverts commit b5ba9324bb6324d8c0e9f0f918cc45eff04bac48.

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,3 @@
-output
-final_app
-.bundle
-Gemfile.lock
-final_app/*
-cached_shas.yml
-**/.sass-cache/*
-bin
-[#]*[#]
+docs-book/final_app/*
+docs-book/output/*
+*.log
